force-app/main/default/objects/Auto_Attribute_Update__mdt/Auto_Attribute_Update__mdt.object-meta.xml
<CustomObject>
    <label>Auto Attribute Update</label>
    <pluralLabel>Auto Attribute Updates</pluralLabel>
    <description>Stores attribute auto-population rules for the guided product configurator flow. Each record defines an attribute code, value, product code, and the step at which the update should fire.</description>
</CustomObject>