force-app/main/default/objects/Auto_Attribute_Update__mdt/fields/Attribute_Code__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Code__c</fullName>
    <label>Attribute Code</label>
    <description>The developer/API name of the attribute to auto-populate (e.g. ATT_BANDWIDTH).</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>