force-app/main/default/objects/Auto_Attribute_Update__mdt/fields/Attribute_Value_Code__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Value_Code__c</fullName>
    <label>Attribute Value Code</label>
    <description>The picklist value code for the attribute to auto-populate (e.g. CCC_PKLVAL_DOWNLOAD_SPEED_1000). This code is resolved to a Salesforce picklist value ID at runtime using the attributeCategories data from the Data Manager.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>