force-app/main/default/objects/Auto_Attribute_Update__mdt/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <description>The Product Code (Product2.ProductCode) for which this auto-attribute update applies.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>