force-app/main/default/objects/Auto_Attribute_Update__mdt/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Step</label>
    <description>The step number in the guided flow at which this auto-attribute update should fire (1-based).</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>